Add simple unit tests, removed Exceptions.propagate